cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz158280.cpp
#define TEMPLATE template

template <typename TT>
struct B {
    typename TT::TEMPLATE unique<TT> x;
};

int main() {
    return 0;
}